<resources>
    <string name="app_name">Warehouse Management</string>

    <!-- login screen txt -->
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="email">Enter your email</string>
    <string name="password">Enter your Password</string>

    <string name="productName">Search by name</string>
    <string name="userRegistration">Registration Form</string>
    <string name="firstName">Enter your first name</string>

    <string name="btnCancel">Cancel</string>

    <string name="headerId">ID</string>
    <string name="headerName">Product</string>
    <string name="headerQuantity">Qty</string>
    <string name="headerLocation">Location</string>
    <string name="headerInfo">Product List Information</string>
    <string name="Add">Add</string>
    <string name="clear_form">Clear Form</string>
    <string name="btnErase">Delete</string>
    <string name="btnModify">Modify</string>
    <string name="prodLoc">Location</string>
    <string name="prodQty">Quantity</string>
    <string name="prodName">Product</string>
    <string name="searchField">Search...</string>
    <string name="btnback">Back</string>
    <string name="not_sms_act">SMS On/Off</string>
    <string name="config">Configuration</string>


</resources>