<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:autofillHints=""
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="@color/background">

    <!-- SCREEN TITLE -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userRegistration"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp" />

    <!-- USERNAME FIELD -->
    <EditText
        android:id="@+id/getUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primaryDark"
        android:hint="@string/firstName"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- EMAIL FIELD -->
    <EditText
        android:id="@+id/getRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:backgroundTint="@color/primaryDark"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- PASSWORD FIELD -->
    <EditText
        android:id="@+id/getRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:backgroundTint="@color/primaryDark"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- REGISTER BUTTON -->
    <Button
        android:id="@+id/btnSubmitRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:backgroundTint="@color/primary"
        android:text="@string/register"
        android:textColor="@color/black"
        tools:ignore="VisualLintButtonSize" />

    <!-- CANCEL/BACK BUTTON -->
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/btnCancelColorBG"
        android:text="@string/btnback"
        android:textColor="#000000" />

</LinearLayout>
