<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/loginScreen"
    android:padding="20dp"
    android:gravity="center"
    android:background="@color/background">

    <!-- APP LOGO -->
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/app_logo"
        android:contentDescription="@string/app_name"
        android:layout_marginBottom="20dp"/>

    <!-- EMAIL TEXT BOX -->
    <EditText
        android:id="@+id/getEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:backgroundTint="@color/primaryDark"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- PASSWORD TEXT BOX -->
    <EditText
        android:id="@+id/getPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="false"
        android:backgroundTint="@color/primaryDark"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- LOGIN BUTTON -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/primary"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        tools:ignore="VisualLintButtonSize" />

    <!-- REGISTER BUTTON -->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/accent"
        android:textSize="20sp"
        android:text="@string/register"
        android:textColor="@color/black"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>
